Fix hero to work on firefox

--- a/_sass/components/_hero.sass
+++ b/_sass/components/_hero.sass
@@ -2,15 +2,15 @@
     color: $gray-lighter
     height: 80vh
     border-bottom: 1px solid $grayblue-darker
-    +display(flex)
-    +align-items(center)
     &-bg
+        z-index: 0
         width: 100%
         height: 100%
         background: url(/assets/images/posji6vntv8-matthew-smith.jpg) no-repeat top center
         background-size: cover
         filter: grayscale(1)
     &-content-wrapper
+        z-index: 1
         width: 100%
         height: inherit
         position: absolute
