--- a/_sass/components/_site-header.sass
+++ b/_sass/components/_site-header.sass
@@ -20,7 +20,7 @@
         background-color: $grayblue-lighter
         top: 43px
         height: 100%
-        z-index: 1
+        z-index: 10
         +media($medium-screen)
             +display(flex)
             +justify-content(center)
